11-05-2024:
- polybar: 
add more mkDefault for more flexible configuration
change default font size from 18 to 16
- i3lock:
now writes a script binary for the user's shell path instead of running a xdg config file.
binary called "i3lock" and will replace the default created by nixos option services.xserver.windowManager.i3.enable when run as a normal user


11-04-2024:
- add changelog.txt
- i3lock module
- add Window swapping to i3:
use (Mod)+Shift+arrows to swap windows, sometimes the diagnals will swap and idk how to fix it
Normal window replacement is done wirh Mod4 (window key) and h j k l to not interfere with gaming