@@ -1,12 +1,10 @@
 { pkgs, self, lib, ... }:
 let
   inherit (lib) mkForce;
-  profile = self + /profiles/home-manager/g.nix;
   theme = self + /profiles/home-manager/desktop-themes/faraway.nix;
 in
 {
   imports = [
-    profile
     theme
   ];
 
