@@ -1,12 +1,10 @@
 { self, icons, ... }:
 let
   inherit (builtins) fetchurl;
-  profile = self + /profiles/home-manager/g.nix;
   theme = self + /profiles/home-manager/desktop-themes/faraway.nix;
 in
 {
   imports = [
-    profile
     theme
   ];
 
