@@ -1,11 +1,9 @@
 { self, ... }:
 let
-  profile = self + /profiles/home-manager/bean.nix;
   theme = self + /profiles/home-manager/desktop-themes/determination.nix;
 in
 {
   imports = [
-    profile
     theme
   ];
 
